fixed the snowy container that doesn't contain its content (content overflowed)

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -4,6 +4,8 @@
 
 .snowy-container {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .snowy-wrapper {
